k8s/config/3_aggregator-microservice/aggregator-microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregator-microservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aggregator-microservice
  template:
    metadata:
      labels:
        app: aggregator-microservice
    spec:
      containers:
        - name: aggregator-microservice
          image: aggregator-microservice:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8080
