k8s/config/3_aggregator-microservice/aggregator-microservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  aggregator-service
spec:
  selector:
    app:  aggregator-microservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
