k8s/config/3_aggregator-microservice/aggregator-microservice-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: aggregator-route
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system  # The namespace where Traefik is deployed
  hostnames:
    - iot.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /measurements/aggregate
      backendRefs:
        - name: aggregator-service
          kind: Service
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /measurements/temperature/unit
      backendRefs:
        - name: aggregator-service
          kind: Service
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /measurements/temperature/unit/convert
      backendRefs:
        - name: aggregator-service
          kind: Service
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /measurements/add
      backendRefs:
        - name: aggregator-service
          kind: Service
          port: 8080
